Update the code with the new: - Fix repository unit tests